[package]
name = "chainsaw"
version = "0.2.0" # managed by release.sh
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
aws-config = "0.15.0"
aws-sdk-cloudwatchlogs = "0.15.0"
tokio = { version = "1.19.2", features = ["full"] }
